Add a ReportsListView.
